# Social_Networks

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  start.sh
assets/scss/: _form.scss  _header.scss  _main.scss  _nav.scss  _parts.scss  _variables.scss  app.scss
social_network/: dbComms.py  dbModels.py  dbRelationsParser.py  dbTestInfo.py  db_operations.py  movieApiController.py  predict.py  recommendations.py  recommender.py  warnings.py
social_network/api/: deezerapi.py  lastfmapi.py  shazamapi.py
social_network/data_parser/: parser.py
social_network/database/: __init__.py  connection.py  db_operations.py  memgraph.py  recommender.py
social_network/models/: __init__.py  album.py  artist.py  song.py
social_network/snapshots/: deezer_artists.csv  deezer_data.csv  deezer_songs.csv  lastfm_artists.csv  lastfm_data.csv  lastfm_songs.csv  shazam_artists.csv  shazam_songs.csv
static/css/: app.css  style.css
static/js/: index.js
templates/: account.html  base.html  bookmarkedList.html  databaseExplore.html  dislikedList.html  findMovies.html  index.html  likedList.html  login.html  movieDiscover.html  movieDisplay.html  movieFavs.html  movieList.html  movieListOnline.html  moviePredictions.html  movieRecommendations.html  oldBase.html  protectedPage.html  query.html  songList.html  songListOnline.html  userProfile.html
