
[tool.poetry]
name = "social_network"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
Flask-Dance = "^3.2.0"
Flask-Scss = "^0.5"
requests = "^2.25.1"
pymgclient = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
